--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 			if (detector==1) { //si es un móvil redirecciono la página.
 
-  				location.href="https://elroonix98.github.io/boku_no_hero_movil/menu.html"; //Se redirecciona hacia la versión móvil.
+  				location.href="https://elroonix98.github.io/boku_no_hero/menu.html"; //Se redirecciona hacia la versión móvil.
 
    			}else{
    				location.href="https://elroonix98.github.io/ejemplo/menu.html";
@@ -52,7 +52,7 @@
 	
 	<body onload="setInterval('contador()',1000)" style = "background-color:black">
 		
-		<br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		
 		<div class = "preloader"></div>
 		
