--- a/menu.html
+++ b/menu.html
@@ -2,8 +2,8 @@
 
 <head>
 	
-	<title>Cabecera fija</title>
-
+	<title>My Hero Academia</title>
+	<meta name = "viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 
 <body>
