--- a/menu.html
+++ b/menu.html
@@ -94,7 +94,7 @@
  
 body {
 	background:#024959;
-	background-image: url("fondo1.2.jpg");
+	background-image: url("img/fondo.png");
 	background-repeat: no-repeat;
 	background-size: 100% 80%;
 	background-position: center center;
