--- a/menu.html
+++ b/menu.html
@@ -12,6 +12,7 @@
 		<nav>
 			<ul>
 				<h6>
+					<li style="visibility: hidden;"><a href="" style="visibility: hidden;">__</a></li>
 					<li><a href="#"><font color = "white"><span class="icon-home3"></span> Inicio</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-film"></span> Temporadas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-video-camera"></span> Peliculas</font></a></li>
@@ -131,7 +132,7 @@ nav {
 	
 		nav ul li {
 			display: inline-block;
-			line-height: 45px;
+			line-height: 50px;
 			border: white .5px solid;
 		}
 			
