--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
 					<li><a href="#"><font color = "white"><span class="icon-film"></span> Temporadas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-video-camera"></span> Peliculas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-star-full"></span> Ovas</font></a></li>
-					<a href="" style="visibility: hidden;">___</a></li>
+					<a href="" style="visibility: hidden;">____</a></li>
 				</h6>
 			</ul>
 		</nav>
@@ -132,7 +132,7 @@ nav {
 	
 		nav ul li {
 			display: inline-block;
-			line-height: 65px;
+			line-height: 63px;
 			border: white .5px solid;
 		}
 			
