--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 		<nav>
 			<ul>
 				<h6>
-					<a href="" style="visibility: hidden;">__</a></li>
+					<a href="" style="visibility: hidden;">_</a></li>
 					<li><a href="#"><font color = "white"><span class="icon-home3"></span> Inicio</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-film"></span> Temporadas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-video-camera"></span> Peliculas</font></a></li>
@@ -132,7 +132,7 @@ nav {
 	
 		nav ul li {
 			display: inline-block;
-			line-height: 61px;
+			line-height: 62px;
 			border: white .5px solid;
 		}
 			
