--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
 					<li><a href="#"><font color = "white"><span class="icon-film"></span> Temporadas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-video-camera"></span> Peliculas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-star-full"></span> Ovas</font></a></li>
-					<a href="" style="visibility: hidden;">_____</a></li>
+					<a href="" style="visibility: hidden;">__</a></li>
 				</h6>
 			</ul>
 		</nav>
@@ -133,7 +133,7 @@ nav {
 		nav ul li {
 			display: inline-block;
 			line-height: 62.5px;
-			border: white .5px solid;
+			border: white 1px solid;
 		}
 			
 			nav ul li a {
