--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
 		<nav>
 			<ul>
 				<h6>
-					<a href="" style="visibility: hidden;">_</a>
+					<a href="" style="visibility: hidden;">__</a>
 					<li><a href="#"><font color = "white"><span class="icon-home3"></span> Inicio</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-film"></span> Temporadas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-video-camera"></span> Peliculas</font></a></li>
