--- a/menu.html
+++ b/menu.html
@@ -33,7 +33,7 @@
 					<li><a href="#"><font color = "white"><span class="icon-film"></span> Temporadas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-video-camera"></span> Peliculas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-star-full"></span> Ovas</font></a></li>
-					<a href="" style="visibility: hidden;">___</a>
+					<a href="" style="visibility: hidden;">__</a>
 				</h6>
 			</ul>
 		</nav>
