--- a/menu.html
+++ b/menu.html
@@ -28,12 +28,12 @@
 		<nav>
 			<ul>
 				<h6>
-					<a href="" style="visibility: hidden;">_</a>
+					<a href="" style="visibility: hidden;">__</a>
 					<li><a href="#"><font color = "white"><span class="icon-home3"></span> Inicio</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-film"></span> Temporadas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-video-camera"></span> Peliculas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-star-full"></span> Ovas</font></a></li>
-					<a href="" style="visibility: hidden;">__</a>
+					<a href="" style="visibility: hidden;">___</a>
 				</h6>
 			</ul>
 		</nav>
