--- a/menu.html
+++ b/menu.html
@@ -33,7 +33,7 @@
 					<li><a href="#"><font color = "white"><span class="icon-film"></span> Temporadas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-video-camera"></span> Peliculas</font></a></li>
 					<li><a href="#"><font color = "white"><span class="icon-star-full"></span> Ovas</font></a></li>
-					<a href="" style="visibility: hidden;"></a>
+					<a href="" style="visibility: hidden;">_</a>
 				</h6>
 			</ul>
 		</nav>
@@ -46,7 +46,7 @@
 			
 			<br><br>
 
-			<video controls id = "MyVid">
+			<video controls id = "MyVid" preload = "meta">
 					<source align = "center" src = "Intro/Deku Version_RollingGirl.mp4" type = 'video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 			</video>
 
