--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
 			
 			<br><br>
 
-			<video controls id = "MyVid" preload = "auto">
+			<video controls id = "MyVid">
 					<source align = "center" src = "Intro/Deku Version_RollingGirl.mp4" type = 'video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 			</video>
 
