--- a/menu.html
+++ b/menu.html
@@ -29,8 +29,8 @@
 			
 			<br><br>
 
-			<video controls id = "MyVid">
-					<source align = "center" src = "Intro/Deku Version_RollingGirln.mp4" type = "video/mp4">
+			<video controls id = "MyVid" preload = "meta">
+					<source align = "center" src = "Intro/Deku_RollingGirl.mp4" type = 'video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 			</video>
 
 			<br><br>
