--- a/menu.html
+++ b/menu.html
@@ -64,6 +64,10 @@
 		</font>
 				
 	</MARQUEE>
+	
+	<br>
+	
+	<h3>&copy; 2020 <a href = "#" style = "visibility:hidden;">___</a>ElRoonix</h3>
 
 </body>
 
