--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
 	
 	<br>
 	
-	<h3>&copy; 2020 <a href = "#" style = "visibility:hidden;">___</a>ElRoonix</h3>
+	<font color = "white"><h3 style = "text-align:center;">&copy; 2020 <a href = "#" style = "visibility:hidden;">___</a>ElRoonix</h3></font>
 
 </body>
 
